--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^1.12.5",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
+    "sendgrid": "^5.2.3",
     "stripe": "^5.5.0",
     "stylelint": "^8.3.1"
   },
