--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^3.5.1",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
+    "lodash": "^4.17.5",
     "mongoose": "^4.13.6",
     "nodemon": "^1.12.5",
     "passport": "^0.4.0",
